# cent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py
basic/: collection.py  linear_reg.py  lsm_np.py  plot3d.py  test.py
debugself/src/: main.cc
doc/: numpy.md  opencv.py.md
hello/: .gitignore
hello/basic/: collection.py  simple_lsm.py  vector.py
hello/cpp/selfalloc/: CMakeLists.txt  main.cc  temp.cc
hello/cuda/: cupy_test.py  hello_cu.py  use_paralib.py
hello/cuda/addarr/: CMakeLists.txt  main.cu
hello/cuda/allocvec/: CMakeLists.txt  main.cu
hello/cuda/functor/: CMakeLists.txt  main.cu
hello/cuda/hellocpp/: CMakeLists.txt  main.cu
hello/cuda/paralib/: CMakeLists.txt
hello/cuda/paralib/example/: main.cu
hello/cuda/paralib/include/paralib/: paralib.h
hello/cuda/paralib/paralib/: paralib.cu
hello/open3d/: mesh.py  pointcloud.py
hello/opencv/2d/: coord_ti.py
hello/pytorch/: autograd.py  eval_fmnist.py  fmnist.py  torchscript.py
hello/taichi/: count_prime.py  gui.py  julia_set.py  rasterizer.py
hello/taichi/ti_rasterizer/: rasterizer.py
hello/taichi/ti_raytracer/: ray.py  raytracer.py  test.py  utest.py  utils.py  world.py
hello/tensorflow/: hello.py
monocular_depth_estimation/: data.py
muda_playground/hellocuda/: xmake.lua
muda_playground/hellocuda/src/: main.cu
muda_self/hello/: xmake.lua
nn/torchUcuda/: setup.py
playground/cvpg/: diff.py
playground/debugself/: CMakeLists.txt
playground/games105/: task0_test_environment.py  viewer.py
playground/muda_playground/hellocpp/: xmake.lua
playground/muda_playground/hellocpp/src/: main.cpp
playground/muda_playground/hellocuda/: xmake.lua
playground/pyml/aqi/: aqi.py
playground/pyml/generative/: gan.py
playground/pyml/nn/: activator.py  cnn_mnist.py  mynn.py  utest.py
playground/pyml/rnn/: 3dplot.py  chatbot_tut.py  mini_char_rnn.py  torch_predict_path.py  torch_rnn.py
playground/pyml/rnn/classify_name/: main.py
playground/pyml/whitewine/: kdtree.py  knn.py  utest.py
playground/visbed/: CMakeLists.txt
playground/visbed/projects/curve_fit/: CMakeLists.txt
playground/visbed/projects/curve_fit/include/: models.h
pyml/generative/: gan.py
pyml/hello/: hello.py
pyml/nn/: activator.py  mynn.py  naive_perceptron.py  utest.py
pyml/rnn/classify_name/: main.py
pyml/rnn/lstm/: lstm_test.py  test.py
pyml/whitewine/: kdtree.py  knn.py  logistic_reg.py  utest.py  whitewine.py
reimpls/terrain/: CMakeLists.txt  Main.cpp
terrain/: Main.cpp
terrain/common/: camera.h
terrain/engine/: window.cpp  window.h
terrain_pg/: main.py  utest.py
terrain_pg/scenes/: block.py  pyramid.py  terrain.py
terrain_pg/ti_raytracer/: camera.py  raytracer.py  world.py
terrain_pg/ti_tracer/: tracer.py
testbed/: CMakeLists.txt
testbed/include/testbed/: common.h  render_buffer.h  testbed.h
testbed/include/testbed/cuda/: common.cuh  render_buffer.h
testbed/source/: main.cc  testbed.cc
visbed/projects/curve_fit/: CMakeLists.txt
visbed/projects/curve_fit/include/: models.h
visbed/projects/curve_fit/source/: main.cc
woodcurve/: imgui.ini  wood.py
