cmake_minimum_required(VERSION 3.18)
set(TARGET_NAME terrain)

file(GLOB_RECURSE HEADER_FILES "*.h")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})

list(APPEND TERRAIN_SOURCE
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

add_executable(${TARGET_NAME} ${TERRAIN_SOURCE})
